# CppTemplate

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE
CMake/: Settings.cmake  Utilities.cmake
Source/: CMakeLists.txt  Main.cpp
